--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <body>
+      <header>
+        <h1>Git Overview</h1>
+        <p>An Introduction to Git for Developers</p>
+    </header>
+  
+    <main>
+        <section class="articles">
+            <article>
+                <h2>What is Git?</h2>
+                <p>Git is a distributed version control system used to track changes in source code during software development. It allows multiple developers to collaborate efficiently.</p>
+                <a href="#">Learn more about Git</a>
+            </article>
+  
+            <article>
+                <h2>Why do developers need Git?</h2>
+                <p>Git helps developers manage code, keep track of changes, collaborate on projects, and revert back to previous versions when needed. It's essential for efficient teamwork.</p>
+                <a href="#">Learn more</a>
+            </article>
+  
+            <article>
+                <h2>What is a branch in Git?</h2>
+                <p>A branch in Git is a parallel version of the repository. It allows developers to work on different features or fixes without affecting the main project.</p>
+                <a href="#">Learn more about Git branches</a>
+            </article>
+        </section>
+    </main>
+  
+    <footer>
+        <p>&copy; 2024 Git Overview | All Rights Reserved</p>
+    </footer>
+  
 </body>
 </html
