HTML link to css file is fixed and Footer information added

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="C:\Users\ANZHELA\Documents\iakubdubachev Wireframe Task  1\Module-User-Focused-Data\Wireframe\css\style.css">
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
 </main>
 
 <footer>
-  <p>Footer content goes here</p>
+  <p>If you want more information about Github or Git visit <a href="https://docs.github.com/en/get-started/start-your-journey/about-github-and-git" target="_blank"> Here </a> </p>
 </footer>
 
 </body>
