--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,11 +17,11 @@
       <header>
         <h1>Product Pick</h1>
       </header>
-      
+
        <!-- NAME -->
       <div>
          <label for="fullName">Full Name</label>
-         <input type="text" name="fullName" id="fullName" placeholder="Full name" required>
+         <input type="text" name="fullName" id="fullName" placeholder="Full name" required pattern=".{2,}">
       </div>
   
       <!-- EMAIL -->
