Pseudo class was added

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,8 +12,8 @@
       <p>A tool every developer should know about.</p>
   </header>
   <main>
-    <section class="articles">
-        <article class="first-article">
+    <section>
+        <article class="article">
             <h2>What is Git?</h2>
             <p>Git is a distributed version control system that helps track changes in source code during software development.</p>
             <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read more</a>
