--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,7 +13,7 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form>
+  <form action="results.html" method="get">
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
