Adding name lable in html

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,6 +14,10 @@
   </header>
   <main>
   <form action="results.html" method="get">
+    <div>
+      <lable for="name">Name</lable>
+      <input type="text" name=" name" id="name" required> 
+     </div>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
