--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -18,6 +18,11 @@
       <lable for="name">Name</lable>
       <input type="text" name=" name" id="name" required> 
      </div>
+     <div>
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" required>
+    </div>
+    <div>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
