Adding select tag to html for making options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -23,6 +23,14 @@
       <input type="email" name="email" id="email" required>
     </div>
     <div>
+      <div>
+        <label for="t-shirtColor">Choose T-shirt Color</label>
+        <select name="t-shirtColor" id="t-shirtColor" required>
+          <option value="Blue">Blue</option>
+          <option value="Black">Black</option>
+          <option value="Purple">Purple</option>
+        </select>
+      </div>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
