--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -43,6 +43,10 @@
           <option value="XXL">XXL</option>
         </select>
       </div>
+      <div>
+        <lable for="date">Choose Delivery Date:</lable>
+        <input type="date" name="date" id="date" min="31/10/2024" max="31/11/2024" required>
+     </div>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
