Adding submit button to the form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -47,6 +47,9 @@
         <lable for="date">Choose Delivery Date:</lable>
         <input type="date" name="date" id="date" min="31/10/2024" max="31/11/2024" required>
      </div>
+     <div>
+      <input type="submit" value="Submit">
+    </div>
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
