Changing the word in h2 from Homework to Leili

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -57,7 +57,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Leili SOLUTION</h2>
   </footer>
 </body>
 
