Deleting action attribute from form

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,7 +13,7 @@
     <h1>Product Pick</h1>
   </header>
   <main>
-  <form action="results.html" method="get">
+  <form>
     <div>
       <lable for="name">Name</lable>
       <input type="text" name=" name" id="name" required> 
