fixed bags,pin the footer at the bottom and added article tag

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,89 +18,86 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="page">
-      <header class="header">
-        <div class="wrapper_title"></div>
+    <header class="header">
+      <div class="wrapper_title">
         <h1 class="title">Git Hub</h1>
         <p class="desc_title">
           Web page there you can find information about Git Hub
         </p>
-      </header>
+      </div>
+    </header>
 
-      <!-- Add your HTML markup here -->
+    <!-- Add your HTML markup here -->
 
-      <main class="main">
-        <div class="wrapper-article">
-          <div class="articles main_article">
-            <img src="./img/git1.jpg" alt="Git" />
+    <main class="main">
+      <div class="wrapper-article">
+        <article class="articles main_article">
+          <img src="./img/git1.jpg" alt="Git" />
+          <div class="article_info">
+            <h2 class="article_title">What is Git?</h2>
+            <p class="article_desc">
+              GitHub is an online software development platform. It's used for
+              storing, tracking, and collaborating on software projects.
+            </p>
+            <button class="article_btn">
+              <a
+                href="https://blog.hubspot.com/website/what-is-github-used-for#what-github"
+                >Read More</a
+              >
+            </button>
+          </div>
+        </article>
+        <article class="articles">
+          <div class="article">
+            <img src="./img/git2.jpg" alt="Git" />
             <div class="article_info">
-              <h2 class="article_title">What is Git?</h2>
+              <h2 class="article_title">Why do developers need Git?</h2>
               <p class="article_desc">
-                GitHub is an online software development platform. It's used for
-                storing, tracking, and collaborating on software projects.
+                Developers need Git to efficiently track code changes,
+                collaborate without conflicts, revert to previous versions, and
+                manage code across teams, making development smoother and more
+                organized.
               </p>
               <button class="article_btn">
                 <a
-                  href="https://blog.hubspot.com/website/what-is-github-used-for#what-github"
+                  href="https://blog.hubspot.com/website/what-is-github-used-for#what-github-used-for"
                   >Read More</a
                 >
               </button>
             </div>
           </div>
-          <div class="articles">
-            <div class="article">
-              <img src="./img/git2.jpg" alt="Git" />
-              <div class="article_info">
-                <h2 class="article_title">Why do developers need Git?</h2>
-                <p class="article_desc">
-                  Developers need Git to efficiently track code changes,
-                  collaborate without conflicts, revert to previous versions,
-                  and manage code across teams, making development smoother and
-                  more organized.
-                </p>
-                <button class="article_btn">
-                  <a
-                    href="https://blog.hubspot.com/website/what-is-github-used-for#what-github-used-for"
-                    >Read More</a
-                  >
-                </button>
-              </div>
-            </div>
 
-            <div class="article">
-              <img src="./img/git3.webp" alt="Git" />
-              <div class="article_info">
-                <h2 class="article_title">What is a branch in Git?</h2>
-                <p class="article_desc">
-                  A branch in Git is a separate line of development that allows
-                  you to work on features or fixes independently from the main
-                  project. It lets you experiment, make changes, and merge them
-                  back without affecting the main codebase.
-                </p>
-                <button class="article_btn">
-                  <a
-                    href="https://docs.github.com/ru/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches"
-                    >Read More</a
-                  >
-                </button>
-              </div>
+          <div class="article">
+            <img src="./img/git3.webp" alt="Git" />
+            <div class="article_info">
+              <h2 class="article_title">What is a branch in Git?</h2>
+              <p class="article_desc">
+                A branch in Git is a separate line of development that allows
+                you to work on features or fixes independently from the main
+                project. It lets you experiment, make changes, and merge them
+                back without affecting the main codebase.
+              </p>
+              <button class="article_btn">
+                <a
+                  href="https://docs.github.com/ru/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches"
+                  >Read More</a
+                >
+              </button>
             </div>
           </div>
-        </div>
-      </main>
-      <footer class="footer">
-
-        <div class="footer-git footer-text">
-          <a
-            class="footer-link"
-            href="https://github.com/DenS116"
-            target="_blank"
-          >
-            <i class="fa-brands fa-github"></i>&nbsp; Made by DenS116
-          </a>
-        </div>
-
-      </footer>
-    </div>
+        </article>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-git footer-text">
+        <a
+          class="footer-link"
+          href="https://github.com/DenS116"
+          target="_blank"
+        >
+          <i class="fa-brands fa-github"></i>&nbsp; Made by DenS116
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
