complete  attributes of name and email inputs

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,11 +16,11 @@
   <form action="results.html" method="get">
     <div>
       <label for="name">Name</label>
-      <input name="name" type="text" id="name" >
+      <input name="name"  placeholder="User Name" type="text" id="name" required >
     </div>
     <div>
       <label for="email">Email address</label>
-      <input name="Email address" type="email" id="email">
+      <input name="Email address" placeholder="Email address"  required type="email" id="email">
     </div>
     <div>
       <label>Color</label>
@@ -30,8 +30,8 @@
       <label>Size</label>
       <input name="size">
   </div>
-
-    <button>Submit</button>
+    <button type="reset">Reset</button>
+    <button type="submit">Submit</button>
   </form>
 
   </main>
