add Fieldset and legend to the customer information

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,14 +14,17 @@
   </header>
   <main>
   <form action="results.html" method="get">
-    <div>
+   <fieldset> 
+    <legend>Customer Information</legend>
+    <div class="c-information">
       <label for="name">Name</label>
       <input name="name"  placeholder="User Name" type="text" id="name" required >
     </div>
-    <div>
+    <div class="c-information">
       <label for="email">Email address</label>
       <input name="Email address" placeholder="Email address"  required type="email" id="email">
     </div>
+  </fieldset>
     <div>
       <label>Color</label>
       <input name="colour">
