Skeleton page code, no styling added

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,42 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <h1>Page Title</h1>
+    <p>Add short description</p>
+
+    <!--Article 1-->
+    <article>
+      <header>
+        <img src="">
+        <h1>Article Title</h1>
+      </header>
+      <p>Article Summary</p>
+      <a href="url">link text</a>
+    </article> 
+
+    <!--Article 2-->
+    <article>
+      <header>
+        <img src="">
+        <h1>Article Title</h1>
+      </header>
+      <p>Article Summary</p>
+      <a href="url">link text</a>
+    </article> 
+
+    <!--Article 3-->
+    <article>
+      <header>
+        <img src="">
+        <h1>Article Title</h1>
+      </header>
+      <p>Article Summary</p>
+      <a href="url">link text</a>
+    </article> 
+
+    <footer>
+      <p>Add contant links and site info
+      <a href="mailto:abc@example.com">abc@example.com</a></p>
+    </footer> 
 </body>
 </html
