--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,55 +9,56 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Product Pick</h1>
+    <header class="header">
+      <h1 class="header-title">Product Pick</h1>
     </header>
     <main>
-      <form>
-        <div>
-          <label for="name">Name</label>
-          <input type="text" id="name" required/>
-        </div>
+      <div class="container">
+        <form>
+          <div class="input-item">
+            <label for="name">Name</label>
+            <input type="text" id="name" required />
+          </div>
 
-        <div>
-          <label for="email">Email</label>
-          <input type="email" id="email" required/>
-        </div>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" required />
+          </div>
 
-        <div>
-          <label for="color">Color</label>
-          <select name="color" id="color" required>
-            <option value="">Select one</option>
-            <option value="white">White</option>
-            <option value="black">Black</option>
-            <option value="red">Red</option>
-          </select>
-        </div>
+          <div>
+            <label for="color">Color</label>
+            <select name="color" id="color" required>
+              <option value="">Select one</option>
+              <option value="white">White</option>
+              <option value="black">Black</option>
+              <option value="red">Red</option>
+            </select>
+          </div>
 
-        <div>
-          <label for="size">Size</label>
-          <select name="size" id="size" required>
-            <option value="">Select one</option>
-            <option value="xs">XS</option>
-            <option value="s">S</option>
-            <option value="m">M</option>
-            <option value="l">L</option>
-            <option value="xl">XL</option>
-            <option value="xxl">XXL</option>
-          </select>
-        </div>
+          <div>
+            <label for="size">Size</label>
+            <select name="size" id="size" required>
+              <option value="">Select one</option>
+              <option value="xs">XS</option>
+              <option value="s">S</option>
+              <option value="m">M</option>
+              <option value="l">L</option>
+              <option value="xl">XL</option>
+              <option value="xxl">XXL</option>
+            </select>
+          </div>
 
-        <div>
-          <label for="delivery-date">Delivery Date</label>
-          <input type="date" max="2024-11-12" required/>
-        </div>
+          <div>
+            <label for="delivery-date">Delivery Date</label>
+            <input type="date" max="2024-11-12" required />
+          </div>
 
-        <button type="submit">Submit</button>
-      </form>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </main>
-    <footer>
-      <!-- change to your name-->
-      <h2>By Rashaad Ebrahim</h2>
+    <footer class="footer">
+      <h2 class="footer-title">By Rashaad Ebrahim</h2>
     </footer>
   </body>
 </html>
