added Name input and label

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,6 +14,17 @@
   </header>
   <main>
   <form>
+    <div>
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" value="John Smith" readonly>
+    </div>
+    
+   
+    
+   
+
+
+
     <!-- write your html here-->
     <!-- try writing out the requirements first-->
   </form>
@@ -21,7 +32,7 @@
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Zohreh Kazeminpour</h2>
   </footer>
 </body>
 
