--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,7 +10,7 @@
 
     <!-- Page Header -->
     <header>
-        <h1>*****ABOUT GIT******</h1>
+        <h1>****ABOUT GIT*****</h1>
         <p>Learn about Git, its uses, and the concept of branches.</p>
     </header>
 
