pin footer at the bottom and added styles to the button

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -9,91 +9,79 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="title">Product Pick</h1>
-      </header>
-      <main class="main">
-        <form
-          class="form"
-          action="#"
-          method="get"
-          enctype="multipart/form-data"
-        >
-          <div class="shop">
-            <p>First Name:</p>
-            <input
-              type="text"
-              name="first name"
-              placeholder="Enter First Name"
-              value=""
-            />
-          </div>
+    <header>
+      <h1 class="title">Product Pick</h1>
+    </header>
+    <main class="main">
+      <form class="form" action="#" method="get" enctype="multipart/form-data">
+        <div class="shop">
+          <p>First Name:</p>
+          <input
+            type="text"
+            name="first name"
+            placeholder="Enter First Name"
+            value=""
+          />
+        </div>
 
-          <div class="shop">
-            <p>Last Name:</p>
-            <input
-              type="text"
-              name="Enter last name"
-              placeholder="Last Name"
-              value=""
-            />
-          </div>
+        <div class="shop">
+          <p>Last Name:</p>
+          <input
+            type="text"
+            name="Enter last name"
+            placeholder="Last Name"
+            value=""
+          />
+        </div>
 
-          <div class="shop">
-            <p>Email:</p>
-            <input
-              type="email"
-              name
-              placeholder="Enter Email address"
-              value=""
-            />
-          </div>
+        <div class="shop">
+          <p>Email:</p>
+          <input type="email" name placeholder="Enter Email address" value="" />
+        </div>
 
-          <h2>Choose color of the T-Shirt</h2>
+        <h2>Choose color of the T-Shirt</h2>
 
-          <div class="shop">
-            <input type="radio" id="white" name="color" value="white" />
-            <label for="white">White</label>
+        <div class="shop">
+          <input type="radio" id="white" name="color" value="white" />
+          <label for="white">White</label>
 
-            <input type="radio" id="black" name="color" value="black" />
-            <label for="black">Black</label>
-            <input type="radio" id="yellow" name="color" value="yellow" />
-            <label for="yellow">Yellow</label>
-          </div>
+          <input type="radio" id="black" name="color" value="black" />
+          <label for="black">Black</label>
+          <input type="radio" id="yellow" name="color" value="yellow" />
+          <label for="yellow">Yellow</label>
+        </div>
 
-          <h2>Choose your size of the T-Shirt</h2>
-          <label for="select-size">Select size</label>
-          <select name="size" id="select-size">
-            <option label="XS">XS</option>
-            <option label="S">S</option>
-            <option label="M">M</option>
-            <option label="L">L</option>
-            <option label="XL">XL</option>
-            <option label="XXL">XXL</option>
-          </select>
+        <h2>Choose your size of the T-Shirt</h2>
+        <label for="select-size">Select size</label>
+        <select name="size" id="select-size">
+          <option label="XS">XS</option>
+          <option label="S">S</option>
+          <option label="M">M</option>
+          <option label="L">L</option>
+          <option label="XL">XL</option>
+          <option label="XXL">XXL</option>
+        </select>
 
-          <div class="shop">
-            <h3>When do you want the t-shirt to be delivered?</h3>
-            <label for="date">Enter Date:</label>
-            <input
-              type="date"
-              id="date"
-              name="datemin"
-              min="2024-10-10"
-              max="2024-11-10"
-            />
-          </div>
+        <div class="shop">
+          <h3>When do you want the t-shirt to be delivered?</h3>
+          <label for="date">Enter Date:</label>
+          <input
+            type="date"
+            id="date"
+            name="datemin"
+            min="2024-10-10"
+            max="2024-11-10"
+          />
+        </div>
 
-          <div class="submit">
-            <button type="submit" class="btn">Submit</button>
-          </div>
-        </form>
-      </main>
-      <footer class="footer">
-        <!-- change to your name-->
-        <h2>By Denis Suvorov HOMEWORK SOLUTION</h2>
-      </footer>
-    </div>
+        <div class="submit">
+          <button type="submit" class="btn">Submit</button>
+        </div>
+      </form>
+    </main>
+    <footer class="footer">
+      <!-- change to your name-->
+      <h2>By Denis Suvorov HOMEWORK SOLUTION</h2>
+    </footer>
   </body>
 </html>
