Add 'required' attribute to color radio buttons to enforce selection before form submission

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,6 +44,7 @@
                 name="color"
                 id="navy-blue"
                 value="Navy Blue"
+                required
               />
               <label for="navy-blue">Navy Blue</label>
             </div>
