--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <div class="container">
-        <form class="form">
+        <form class="form grid">
           <div>
             <label for="name">Name</label>
             <input type="text" id="name" required />
@@ -31,9 +31,10 @@
               
               <select name="color" id="color" required>
                 <option value="">Select one</option>
-                <option value="white">White</option>
-                <option value="black">Black</option>
-                <option value="red">Red</option>
+                <option value="white"> ⚪ White
+                </option>
+                <option value="black">⚫ Black</option>
+                <option value="red">🔴 Red</option>
               </select>
             </div>
 
