Focus and hover effects added

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,13 +16,13 @@
       <div class="container">
         <form class="form grid">
           <div>
-            <label for="name">Name</label>
-            <input type="text" id="name" required />
+            <label for="name" >Name</label>
+            <input type="text" id="name" placeholder="Your name" required />
           </div>
 
           <div>
             <label for="email">Email</label>
-            <input type="email" id="email" required />
+            <input type="email" id="email" placeholder="email@example.com" required />
           </div>
 
           <div class="grid">
@@ -57,7 +57,7 @@
             <input type="date" max="2024-11-12" required />
           </div>
 
-          <button type="submit">Submit</button>
+          <button class="btn" type="submit">Submit</button>
         </form>
       </div>
     </main>
