--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,23 +16,27 @@
       <div class="container">
         <form class="form grid">
           <div>
-            <label for="name" >Name</label>
+            <label for="name">Name</label>
             <input type="text" id="name" placeholder="Your name" required />
           </div>
 
           <div>
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="email@example.com" required />
+            <input
+              type="email"
+              id="email"
+              placeholder="email@example.com"
+              required
+            />
           </div>
 
           <div class="grid">
             <div class="input-item">
               <label for="color">Color</label>
-              
+
               <select name="color" id="color" required>
                 <option value="">Select one</option>
-                <option value="white"> ⚪ White
-                </option>
+                <option value="white">⚪ White</option>
                 <option value="black">⚫ Black</option>
                 <option value="red">🔴 Red</option>
               </select>
