Fixing footer to bottom of viewport

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -56,7 +56,7 @@
       </div>
   </div>
 
-    <footer>
+    <footer id="footer">
       <p>This website was created by Funmi M. For more details, please email:
       <a href="mailto:funmim@example.com">funmim@example.com</a></p>
     </footer> 
