Adding required attribute to select tag

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -24,7 +24,7 @@
     </div>
     <div>
       <label for="colors">Choose a color:</label>
-      <select name="colors" id="colors">
+      <select name="colors" id="colors" required>
       <option value="blue">Blue</option>
       <option value="black">Black</option>
       <option value="green">Green</option>
@@ -34,7 +34,7 @@
     </div>
     <div>
       <label for="sizes">Choose your size:</label>
-      <select name="sizes" id="sizes">
+      <select name="sizes" id="sizes" required>
          <option value="Xs">XS</option>
       <option value="s">S</option>
       <option value="m">M</option>
@@ -63,7 +63,7 @@
 
   </main>
   <footer>
-    <!-- change to your name-->
+    
     <h2>By Zohreh Kazeminpour</h2>
   </footer>
 </body>
