basic form layout
WIP. made simple from, tested for validation and any errors. added name to footer section

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -13,15 +13,27 @@
     <h1>Product Pick</h1>
   </header>
   <main>
+    <h2 class="para">Please fill in the order form to complete your order</h2>
+
   <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
+  <div class="form">
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname" required/>
+    <br>
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname" required/>
+    <br>
+    <label for="email">Email:</label><br>
+    <input id="email" type="email" required/>
+  </div>
+
+  
   </form>
 
   </main>
   <footer>
     <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
+    <h2>By Saqib Javed</h2>
   </footer>
 </body>
 
