--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -30,15 +30,15 @@
             />
           </div>
 
-          <div class="grid--contenet">
+          <div class="grid--content">
             <div class="input-item">
               <label for="color">Color</label>
 
               <select name="color" id="color" required>
                 <option value="">Select one</option>
-                <option value="white">⚪ White</option>
-                <option value="black">⚫ Black</option>
-                <option value="red">🔴 Red</option>
+                <option value="white">White</option>
+                <option value="black">Black</option>
+                <option value="red">Red</option>
               </select>
             </div>
 
